# internal/models/user_orm.go
@@ -1,0 +1,10 @@
+package models
+
+import "gorm.io/gorm"
+
+type User struct {
+	gorm.Model
+	Email    string `json:"email"`
+	Password string `json:"password"`
+	Tasks    []Task `json:"tasks"` // Список задач, связанных с пользователем
+}
